AX: AccessibilityRenderObject::computeAccessibilityIsIgnored performs an unnecessary ancestry traversal for RenderTexts https://bugs.webkit.org/show_bug.cgi?id=264861 rdar://problem/118437052

Reviewed by Chris Fleizach and Andres Gonzalez.

AccessibilityRenderObject::computeAccessibilityIsIgnored for RenderTexts traverses the ancestry twice.
We can combine this into one traversal. Also modernizes some nearby code to use dynamicDowncast instead
of is + downcast.

* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::computeAccessibilityIsIgnored const):

Canonical link: https://commits.webkit.org/270805@main